# Bhodi

./: .gitignore  AGENTS.md  Containerfile  LICENSE  README.md  VERSIONS.md  bodhi.toml.example  podman-compose.yml  pyproject.toml
.aiwf/: request.json
.aiwf-governance/changes/archive/bhodi-v1-production-ready-rag-framework-with-clean-hexagonal-architecture/: change.json  delta.json  design.md  proposal.md  tasks.md  timeline.jsonl
.aiwf-governance/specs/: bhodi-2026-q2-spec-1-post-rewrite-note.md
.aiwf-governance/specs/bhodi-v1-production-ready-rag-framework-with-clean-hexagonal-architecture/: delta.json  design.md  plan-meta.json  plan.md  planning-context.json  spec.json  verification.json
.github/: copilot-instructions.md  dependabot.yml  quality-baseline.json
.github/workflows/: ci.yml  release.yml
.opencode/: .gitignore  opencode.json  opencode.local.example.json
docs/: configuration.md
docs/api/: index.md
docs/architecture/: overview.md
docs/deploy/: podman.md
opencode-flows/: AGENTS.md
opencode-flows/agent/: backend-architect.md  doc-retriever.md  git-specialist.md  github-ops-engineer.md  python-quality-engineer.md  rag-systems-engineer.md  system-architect.md
scripts/: quality_ratchet.py  sync_opencode_agents.py
src/: AGENTS.md
src/bhodi_doc_analyzer/: __init__.py  assistant.py  chat_service.py  config.py  main.py  utils.py  workflow.py
src/bhodi_doc_analyzer/static/: styles.css
src/bhodi_platform/: AGENTS.md  __init__.py  _version.py
src/bhodi_platform/answering/: __init__.py  application.py  collaborators.py  engine.py  infrastructure.py  memory.py  ports.py  runtime.py  settings.py
src/bhodi_platform/application/: AGENTS.md  __init__.py  answer_query.py  citation_models.py  config.py  facade.py  index_documents.py  indexing.py  models.py  query.py  runtime.py
src/bhodi_platform/conversation/: __init__.py  infrastructure.py  runtime.py  settings.py
src/bhodi_platform/domain/: AGENTS.md  __init__.py  entities.py  exceptions.py  policies.py  services.py  value_objects.py
src/bhodi_platform/evaluation/: __init__.py  budget.py  defaults.py  loader.py  models.py  runner.py  scoring.py
src/bhodi_platform/evaluation/fixtures/: __init__.py
src/bhodi_platform/indexing/: __init__.py  application.py  engine.py  errors.py  infrastructure.py  runtime.py  settings.py
src/bhodi_platform/infrastructure/: AGENTS.md  __init__.py  composition.py  container.py  lifecycle.py  runtime_registry.py  telemetry.py  tracing.py
src/bhodi_platform/infrastructure/chunker/: __init__.py  fixed_size.py  recursive.py
src/bhodi_platform/infrastructure/conversation_memory/: __init__.py  volatile.py
src/bhodi_platform/infrastructure/document_parser/: mock.py  pypdf.py
src/bhodi_platform/infrastructure/embedding/: __init__.py  mock.py  openai.py
src/bhodi_platform/infrastructure/llm/: __init__.py  mock.py  ollama.py  openai.py
src/bhodi_platform/infrastructure/vector_store/: __init__.py  chroma.py  in_memory.py  safe_chroma_collection.py
src/bhodi_platform/interfaces/: AGENTS.md  __init__.py
src/bhodi_platform/interfaces/api/: __init__.py  app.py  models.py  server.py
src/bhodi_platform/interfaces/cli/: __init__.py  indexing.py  main.py  query.py
src/bhodi_platform/interfaces/tui/: AGENTS.md  __init__.py  chat.py
src/bhodi_platform/interfaces/worker/: __init__.py  adapter.py  models.py  queue.py
src/bhodi_platform/ports/: AGENTS.md  __init__.py  answering.py  chunker.py  conversation_memory.py  document_parser.py  embedding.py  indexing.py  llm.py  vector_store.py
src/bhodi_platform/retrieval/: __init__.py  runtime.py  settings.py
src/bodhi_rag/: AGENTS.md  __init__.py  _version.py
src/bodhi_rag/answering/: __init__.py
src/bodhi_rag/answering/application/: __init__.py  synthesize.py
src/bodhi_rag/answering/domain/: __init__.py
src/bodhi_rag/answering/infrastructure/: __init__.py
src/bodhi_rag/answering/ports/: __init__.py
src/bodhi_rag/application/: AGENTS.md  __init__.py  config.py  config_loader.py  facade.py  models.py
src/bodhi_rag/conversation/: __init__.py
src/bodhi_rag/conversation/application/: __init__.py  memory.py
src/bodhi_rag/conversation/domain/: __init__.py
src/bodhi_rag/conversation/infrastructure/: __init__.py  volatile.py
src/bodhi_rag/conversation/ports/: __init__.py  memory.py
src/bodhi_rag/domain/: AGENTS.md  __init__.py  entities.py  exceptions.py  policies.py  services.py  value_objects.py
src/bodhi_rag/evaluation/: __init__.py  budget.py  loader.py  scoring.py  thresholds.py
src/bodhi_rag/indexing/: __init__.py  infrastructure.py  ports.py  settings.py
src/bodhi_rag/indexing/application/: __init__.py  (+2 more)
src/bodhi_rag/infrastructure/: AGENTS.md  __init__.py  container.py  lifecycle.py  runtime_registry.py  telemetry.py  tracing.py
src/bodhi_rag/interfaces/: AGENTS.md  __init__.py
src/bodhi_rag/ports/: AGENTS.md  __init__.py  chunker.py  conversation_memory.py  document_parser.py  llm.py  reranker.py  vector_store.py
src/bodhi_rag/retrieval/: __init__.py
src/indexer/: cli.py  config_indexer.py  document_indexing.py
tests/: AGENTS.md  __init__.py  conftest.py
tests/bhodi_doc_analyzer/: test_compatibility_surface.py  test_config.py
tests/bhodi_platform/: test_citation_models.py  test_conversation_runtime.py  test_domain_entities.py  test_domain_policies.py  test_indexing_application.py  test_indexing_infrastructure.py  test_indexing_runtime.py  test_runtime_registry.py
tests/bodhi_rag/: test_domain_entities.py  test_domain_policies.py  test_indexing_infrastructure.py  test_runtime_registry.py
tests/contract/: test_chroma_hardening.py  test_port_contracts.py
tests/e2e/: test_full_pipeline.py
tests/evals/: test_budget_validator.py  test_fixtures.py  test_scoring.py  test_thresholds.py
tests/indexer/: test_cli.py  test_config_indexer.py  test_document_indexing.py
tests/integration/adapters/: test_chroma.py  test_chroma_wrapper_wiring.py
tests/support/: runtime_stubs.py
tests/unit/bhodi_platform/: test_version.py
tests/unit/bodhi_rag/: test_version.py
(+77 files in other folders)
