[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bodhi-rag"
version = "0.2.0"
description = "A backend RAG engine for Python developers."
readme = "README.md"
requires-python = ">=3.11"

# Core dependencies - pinned to specific stable versions
dependencies = [
    # Web framework
    "fastapi==0.136.3",
    # starlette pinned at 1.2.1 to address transitive CVEs:
    # - PYSEC-2026-161 / CVE-2026-48710 (requires 1.0.1)
    # - CVE-2025-54121 (fixed in 0.47.2)
    # - CVE-2025-62727 (fixed in 0.49.1)
    # FastAPI 0.133+ supports starlette >=1.0.0. Bump only after auditing
    # FastAPI's starlette upper bound and any new advisories.
    "starlette==1.2.1",
    "uvicorn[standard]==0.49.0",

    # Data validation
    "pydantic==2.13.4",

    # Document parsing
    "pypdf==6.13.0",

    # HTTP client
    "httpx==0.28.1",
    "aiohttp==3.14.1",

    # chromadb pinned at 1.5.9. CVE-2026-45829 (GHSA-f4j7-r4q5-qw2c, 9.3
    # Critical pre-auth code injection) affects the Python FastAPI *server*
    # in 1.0.0-1.5.9. bodhi-rag only uses `chromadb.PersistentClient` (embedded
    # mode) in `src/bodhi_rag/infrastructure/vector_store/chroma.py`,
    # which never executes the vulnerable code path. The standalone
    # `chromadb/chroma` server image is no longer pulled by
    # `podman-compose.yml`. Bump to >=1.5.10 only after the upstream fix
    # lands and we re-audit.
    # ChromaDB for vector storage
    "chromadb==1.5.9",

    # OpenAI client
    "openai==2.41.0",

    # Evaluation
    "numpy==2.4.6",
]

[project.optional-dependencies]
# Local LLM support (Ollama, llama.cpp)
local-llm = [
    "llama-cpp-python==0.3.28",
    "ollama==0.6.2",
]

# OpenTelemetry instrumentation
telemetry = [
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp==1.42.1",
]

# All optional dependencies
all = [
    "bodhi-rag[local-llm,telemetry]",
]

[project.urls]
Homepage = "https://github.com/4nibhal/bodhi-rag"
Repository = "https://github.com/4nibhal/bodhi-rag"
Issues = "https://github.com/4nibhal/bodhi-rag/issues"
Changelog = "https://github.com/4nibhal/bodhi-rag/blob/main/VERSIONS.md"

[project.scripts]
# CLI entry points
bodhi-rag = "bodhi_rag.interfaces.cli.main:main"
bodhi-rag-api = "bodhi_rag.interfaces.api.server:main"
bodhi-rag-index = "bodhi_rag.interfaces.cli.indexing:main"

[dependency-groups]
# Development dependencies
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pylint==4.0.5",
    "ruff==0.15.16",
    "mypy==2.1.0",
    "deptry==0.25.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:setuptools",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bodhi_rag*"]

[tool.setuptools.package-data]
"bodhi_rag" = ["evaluation/fixtures/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D212", "ANN101", "ANN102", "ANN401", "PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# Infrastructure adapters follow the lazy-import pattern mandated by
# the root AGENTS.md ("No import-time side effects for model loading,
# vector store creation, filesystem writes, or network initialization").
# Imports inside functions/methods are intentional; PLC0415 is
# locally suppressed. Container.build_from() and the _create_*_adapter
# factories only import the specific adapter they need to wire, so
# unused SDKs (openai, chromadb, sentence-transformers, ...) are never
# loaded when the consumer does not select them.
"src/bodhi_rag/infrastructure/**/*.py" = ["PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
